k8s/portfolio-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: portfolio
  labels:
    app: portfolio
  namespace: portfolio
spec:
  selector:
    matchLabels:
      app: portfolio
  replicas: 3 
  template:
    metadata:
      labels:
        app: portfolio     
    spec:
      containers:
        - name: portfolio
          image: yoavdocker89/my-portfolio:16
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          volumeMounts:
            - name: config-volume
              mountPath: /usr/share/nginx/html/config
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: config-volume
          configMap:
            name: portfolio-configmap
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio
  labels:
    app: portfolio
  namespace: portfolio
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
  selector:
    app: portfolio
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.org/server-snippet: "proxy_ssl_verify off;"
    # kubernetes.io/ingress.class: public
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/use-regex: "true"
  name: portfolio-ingress
  namespace: portfolio
spec:
  ingressClassName: nginx
  rules:
    - host: yoavharel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  number: 80
